Bug 1569439 - Cleanup tooltip pref handling. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D166943